tests/ui/on-unimplemented/self-types.stderr
error[E0277]: union self type
  --> $DIR/self-types.rs:24:19
   |
LL |     needs_trait::<Union>();
   |                   ^^^^^ unsatisfied trait bound
   |
help: the trait `Trait` is not implemented for `Union`
  --> $DIR/self-types.rs:11:1
   |
LL | union Union {
   | ^^^^^^^^^^^
help: this trait has no implementations, consider adding one
  --> $DIR/self-types.rs:9:1
   |
LL | trait Trait {}
   | ^^^^^^^^^^^
note: required by a bound in `needs_trait`
  --> $DIR/self-types.rs:21:19
   |
LL | fn needs_trait<T: Trait>() {}
   |                   ^^^^^ required by this bound in `needs_trait`

error[E0277]: enum self type
  --> $DIR/self-types.rs:26:19
   |
LL |     needs_trait::<Enum>();
   |                   ^^^^ unsatisfied trait bound
   |
help: the trait `Trait` is not implemented for `Enum`
  --> $DIR/self-types.rs:15:1
   |
LL | enum Enum {
   | ^^^^^^^^^
help: this trait has no implementations, consider adding one
  --> $DIR/self-types.rs:9:1
   |
LL | trait Trait {}
   | ^^^^^^^^^^^
note: required by a bound in `needs_trait`
  --> $DIR/self-types.rs:21:19
   |
LL | fn needs_trait<T: Trait>() {}
   |                   ^^^^^ required by this bound in `needs_trait`

error[E0277]: struct self type
  --> $DIR/self-types.rs:28:19
   |
LL |     needs_trait::<Struct>();
   |                   ^^^^^^ unsatisfied trait bound
   |
help: the trait `Trait` is not implemented for `Struct`
  --> $DIR/self-types.rs:19:1
   |
LL | struct Struct;
   | ^^^^^^^^^^^^^
help: this trait has no implementations, consider adding one
  --> $DIR/self-types.rs:9:1
   |
LL | trait Trait {}
   | ^^^^^^^^^^^
note: required by a bound in `needs_trait`
  --> $DIR/self-types.rs:21:19
   |
LL | fn needs_trait<T: Trait>() {}
   |                   ^^^^^ required by this bound in `needs_trait`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
